# lfm-training

./: README.md  pyproject.toml
docs/: 01-what-is-an-llm.md  02-how-training-works.md  03-fine-tuning-explained.md  04-lora-explained.md  05-full-fine-tuning.md  06-data-preparation.md  07-evaluation-and-benchmarks.md  08-quantization-and-export.md  09-architecture-deep-dive.md  10-dpo-and-alignment.md  11-continued-pretraining.md  12-reasoning-and-thinking.md  13-deepspeed-and-distillation.md  14-structured-output.md  README.md
examples/: auto_hp_search.py  benchmark_only.py  continual_training.py  cpt_raw_text.py  distillation.py  dpo_alignment.py  full_finetune.py  multi_dataset_training.py  recipe_from_scratch.py  recipe_reasoning_tools.py  structured_output.py  tool_calling_training.py  wandb_training.py
examples/advanced/: benchmark_training.py  export_only.py  full_benchmark_suite.py
examples/domain_specialists/: cybersecurity.py  finance_assistant.py  legal_assistant.py  medical_assistant.py  sql_specialist.py  terminal_agent.py
examples/getting_started/: basic_training.py  direct_object_training.py  hermes_function_calling_training.py  kaggle_notebook.py
examples/inference/: airllm_inference.py  airllm_mlx_inference.py  turboquant_inference.py
examples/recipes/: api_builder.py  chatbot_assistant.py  math_reasoning.py  multilang_coding.py  recipe_tool_calling.py
examples/training_modes/: deepspeed_training.py  dpo_alignment.py  merge_adapters.py
src/lfm_trainer/: __init__.py  benchmark.py  callbacks.py  cli.py  config.py  cpt.py  data.py  distill.py  dpo.py  export.py  hp_search.py  merge.py  model_card.py  structured_output.py  trainer.py  turboquant.py
src/lfm_trainer/deepspeed_configs/: zero2.json  zero3.json
